# pap

./: Cargo.toml  README.md  recommandations.json  recommendations.json
.github/: copilot-instructions.md
src/: episodes_page.html  main.rs
