[package]
name = "pap"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
htmlescape = "0.3.1"
quick-xml = "0.37.5"
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
